--- a/champion/index.html
+++ b/champion/index.html
@@ -84,7 +84,7 @@
           <h5>2022</h5>
 
           <h5 class="linebreak small"><i>Arts, Sciences</i></h5>
-          <h5>Thalefang Charles <b>&middot;</b> Photographer and storyteller, Botswana &ndash; <a href="../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a></h5>
+          <h5>Thalefang Samuel Charles <b>&middot;</b> Photographer and storyteller, Botswana &ndash; <a href="../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a></h5>
           <p>Recognized for his chronicles of Indigenous knowledge across the Okavango Delta.</p>
           <p><font class="fr">Reconnu pour ses chroniques du savoir autochtones &agrave; travers le delta de l'Okavango.</font></p>
 
@@ -92,6 +92,18 @@
           <h5>Rolf Steinmann <b>&middot;</b> Wildlife cinematographer, <a href="../url/vimeo/148059977/" title="" target="_blank">In Between</a> (short film, 2015)</h5>
           <p>Recognized for cinematography of wildlife in the Arctic, Antarctic and in between.</p>
           <p><font class="fr">Reconnu pour la cin&eacute;matographie de la nature dans l'Arctique et l'Antarctique.</font></p>
+
+          <div class="clear" id="in-mem-2022-a">
+            <h5 class="linebreak"><a onclick="toggle_2022m();">&plus;</a></h5>
+          </div>
+
+          <div class="clear" id="in-mem-2022">
+            <h5 class="linebreak"><a onclick="toggle_2022m();">&minus;</a></h5>
+            <h5 class="linebreak title">In Memoriam</h5>
+            <p><a href="../url/-org/leakeyfoundation/richard-leakey-renowned-paleoanthropologist-and-conservationist-dies-at-age-77/" title="" target="_blank">Dr Richard Erskine Frere Leakey</a> (1944-2022) <b>&middot;</b> Renowned paleoanthropologist and wildlife conservationist.</p>
+            <p>Remembered as an activist for democracy in Africa and as an advocate for African science, from the fossil-rich sedimentary rocks on the shore of Lake Turkana in northern Kenya all the way to the head of Kenya Wildlife Service in 1989 and then to the head of the Kenyan Civil Service in 1998.<font class="fr">&nbsp;&#92;&nbsp;Connu comme un militant pour la d&eacute;mocratie en Afrique et un d&eacute;fenseur de la science africaine, depuis les roches s&eacute;dimentaires riches en fossiles sur les rives du lac Turkana, dans le nord du Kenya, jusqu'au chef du Kenya Wildlife Service en 1989, et puis au chef de la fonction publique kenyane en 1998.</font></p>
+
+          </div>
 
         </ul>
 
@@ -113,9 +125,6 @@
           <h5 class="linebreak small"><i>Sciences</i></h5>
           <h5>Dr Monica L Bond <b>&middot;</b> Wildlife biologist and co-founder of <a href="../url/-org/wildnatureinstitute/" title="Wild Nature Institute" target="_blank">Wild Nature Institute</a></h5>
           <h5>Dr Derek E Lee <b>&middot;</b> Wildlife biologist and co-founder of Wild Nature Institute</h5>
-          <!-- <h5>James Madeli <b>&middot;</b> Research coordinator for Wild Nature Institute</h5> -->
-          <!-- <h5>Veila Makundi <b>&middot;</b> Anne Innis Dagg Foundation coordinator for Wild Nature Institute</h5> -->
-          <!-- <h5>Robert Godson Mollel <b>&middot;</b> Partner of Wild Nature Institute</h5> -->
           <p>Recognized for scientific research of Maasai giraffes in Tanzania.</p>
           <p><font class="fr">Reconnu pour la recherche scientifique sure les girafes en Tanzanie.</font></p>
 
@@ -140,7 +149,6 @@
           <h5>Dr Rutledge (Steve) Boyes <b>&middot;</b> Founder of <a href="../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a> in partnership with <a href="../url/-org/nationalgeographic-okavango/" title="National Geographic / Okavango Wilderness Project" target="_blank" rel="noopener">NGOWP</a></h5>
           <h5>Adjany Costa <b>&middot;</b> Angolan minister of Culture, Tourism, Environment appointed April 2020</h5>
           <h5>Kerllen Costa <b>&middot;</b> Program director of NGOWP Angola assumed office April 2020</h5>
-          <!-- <h5>Koketso Mookodi <b>&middot;</b> Program director of NGOWP Botswana</h5> -->
           <p>Recognized for leadership and scientific research in the Okavango Delta watershed.</p>
           <p><font class="fr">Reconnu pour la recherche scientifique dans le bassin versant du delta de l'Okavango.</font></p>
 
@@ -160,9 +168,6 @@
           <h5>Mumilaaq Qaqqaq <b>&middot;</b> Member of Parliament for Nunavut assumed office October 2019</h5>
           <p>Recognized for her progressive leadership in Canada.</p>
           <p><font class="fr">Reconnue pour sa direction progressiste au Canada.</font></p>
-
-          <!-- <a href="../url/x/mumilaaqqaqqaq/" title="X / ᒧᒥᓛᖅ ᖃᖅᑲᖅ Mumilaaq Qaqqaq" target="_blank" rel="noopener"> -->
-          <!-- Mumilaaq is now focused on sewing, beading, painting and making her space hers. -->
 
           <h5 class="linebreak small"><i>Sciences</i></h5>
           <h5>Dr Michael John Chase <b>&middot;</b> Elephant ecologist, co-founder of <a href="../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a></h5>
@@ -199,8 +204,7 @@
           <div class="clear" id="in-mem-2018">
             <h5 class="linebreak"><a onclick="toggle_2018m();">&minus;</a></h5>
             <h5 class="linebreak title">In Memoriam</h5>
-            <p><a href="../url/-org/sheldrickwildlifetrust-dr-dame-daphne-sheldrick-d-b-e-1934-2018/" title="Sheldrick Wildlife Trust / Dame Daphne Sheldrick" target="_blank">Dr Dame Daphne Marjorie Sheldrick</a> (1934-2018) <b>&middot;</b> Founder of Sheldrick Wildlife Trust.</p>
-            <!-- <p>Major David Leslie William Sheldrick, Kenyan farmer and park warden. (1919-1977)</p> -->
+            <p><a href="../url/-org/sheldrickwildlifetrust-dr-dame-daphne-sheldrick-d-b-e-1934-2018/" title="Sheldrick Wildlife Trust / Dame Daphne Sheldrick" target="_blank">Dr Dame Daphne Marjorie Sheldrick</a> (1934-2018) <b>&middot;</b> Founder of Sheldrick Wildlife Trust</p>
             <p>Remembered for her dedication to wilderness and all that it embrases, to the memory of David and the pioneer wardens of national parks in Kenya, and to her family &ndash; and future generations &ndash; so that they may know how it was once upon a time.<font class="fr">&nbsp;&#92;&nbsp;Rappel&eacute;e pour son d&eacute;vouement &agrave; la nature sauvage et &agrave; tout ce qu'elle englobe, &agrave; la m&eacute;moire de David et des gardiens pionniers des parcs nationaux du Kenya, et &agrave; sa famille &ndash; et aux g&eacute;n&eacute;rations futures &ndash; afin qu'ils sachent comment c'&eacute;tait autrefois.</font></p>
 
           </div>
@@ -324,11 +328,16 @@
     }
   };
 
-  var toggle_2018_m = document.getElementById("in-mem-2018");
-      toggle_2018_a = document.getElementById("in-mem-2018-a");
+  var toggle_2018_m = document.getElementById("in-mem-2018"),
+      toggle_2018_a = document.getElementById("in-mem-2018-a"),
+      toggle_2022_m = document.getElementById("in-mem-2022"),
+      toggle_2022_a = document.getElementById("in-mem-2022-a");
 
   toggle_2018_m.style.display = "none";
   toggle_2018_a.style.display = "block";
+
+  toggle_2022_m.style.display = "none";
+  toggle_2022_a.style.display = "block";
 
   function toggle_2018m() {
     if (toggle_2018_m.style.display == "none") {
@@ -338,6 +347,17 @@
     else {
       toggle_2018_m.style.display = "none";
       toggle_2018_a.style.display = "block";
+    }
+  };
+
+  function toggle_2022m() {
+    if (toggle_2022_m.style.display == "none") {
+      toggle_2022_m.style.display = "block";
+      toggle_2022_a.style.display = "none";
+    }
+    else {
+      toggle_2022_m.style.display = "none";
+      toggle_2022_a.style.display = "block";
     }
   };
 
