--- a/index.html
+++ b/index.html
@@ -137,17 +137,17 @@
       <div class="quote ptych-left">
         <!-- <p>Follow what's happening @<a href="url/x/animathabitat/" title="X / Animat Habitat" target="_blank" rel="noopener">animathabitat</a>, @<a href="https://mstdn.ca/@animathabitat/" title="Mastodon / Animat Habitat" target="_blank" rel="me">animathabitat&ndash;mstdn.ca</a>.<font class="fr">&nbsp;&#92;&nbsp;Suivez ce qui se passe chez Animat Habitat.</font></p> -->
 
-        <h5>Behind-the-scenes at Animat Habitat&hellip;<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses&hellip;</font></h5>
-        <p>Register your name and address to get behind-the-scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom et votre adresse pour entrer dans les coulisses de la nature.</font></p>
+        <h5>Behind the scenes in wildlife art&hellip;<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses d'art de la nature&hellip;</font></h5>
+        <p>Register your name and address to get behind the scenes art Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom et votre adresse pour entrer dans les coulisses chez Animat Habitat.</font></p>
 
         <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A52FB6D182F7A8A669AB1C317E182AD3763A1B775C7C4E900069B5F6BE1E4B7A7B42258404945BDA2B8796E1BC8516FAF">
 
           <div class="gutter-tobo">
-            <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name&nbsp;&#92;&nbsp;Nom et pr&eacute;nom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value=='Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
+            <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name&nbsp;&#92;&nbsp;Nom et pr&eacute;nom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value == 'Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
           </div>
 
           <div class="gutter-tobo clear-top">
-            <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email matte-thin" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address&nbsp;&#92;&nbsp;Addresse e-mail" onfocus="if (this.value=='E-mail address&nbsp;&#92;&nbsp;Addresse e-mail') this.value = ''" title="E-mail address required. &#92;&nbsp;Adresse e-mail requis.">
+            <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email matte-thin" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address&nbsp;&#92;&nbsp;Addresse e-mail" onfocus="if (this.value == 'E-mail address&nbsp;&#92;&nbsp;Addresse e-mail') this.value = ''" title="E-mail address required. &#92;&nbsp;Adresse e-mail requis.">
             <button type="submit">Register<font class="fr">&nbsp;&#92;&nbsp;Enregistrez</font></button>
 
           </div>
