--- a/rss/index.html
+++ b/rss/index.html
@@ -41,25 +41,24 @@
       <div class="clear" id="register" spellcheck="false">
 
         <div>
-          <h3 class="letterhead">Behind-the-scenes at Animat Habitat&hellip;<font class="fr"><br>Dans les coulisses chez Animat Habitat&hellip;</font></h3>
+          <h3 class="letterhead">Behind the scenes in wildlife art&hellip;<font class="fr"><br>Dans les coulisses d'art de la nature&hellip;</font></h3>
           <ul class="square">
             <li>Letters from the editor of project broadcasts.<font class="fr">&nbsp;&#92;&nbsp;Lettres de l'&eacute;diteur des mises &agrave; jour du projet.</font></li>
             <li>Previews of artworks and exhibitions of work.<font class="fr">&nbsp;&#92;&nbsp;Avant-premi&egrave;res d'&oelig;uvres d'art et d'expositions d'&oelig;uvres.</font></li>
 
           </ul>
 
-          <!-- <h5 class="linebreak">Behind-the-scenes at Animat Habitat&hellip;<font class="fr">&nbsp;&#92;&nbsp;Dans les coulisses&hellip;</font></h5> -->
-          <p class="linebreak">Register your name and address to get behind-the-scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom et votre adresse pour entrer dans les coulisses de la nature.</font></p>
+          <p class="linebreak">Register your name and address to get behind the scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Enregistrez votre nom et votre adresse pour entrer dans les coulisses chez Animat Habitat.</font></p>
 
         </div>
 
         <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A52FB6D182F7A8A669AB1C317E182AD3763A1B775C7C4E900069B5F6BE1E4B7A7B42258404945BDA2B8796E1BC8516FAF">
           <div class="clear-top">
-            <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name&nbsp;&#92;&nbsp;Nom et pr&eacute;nom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value=='Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
+            <input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name&nbsp;&#92;&nbsp;Nom et pr&eacute;nom" placeholder="Name&nbsp;&#92;&nbsp;Nom" onfocus="if (this.value == 'Name&nbsp;&#92;&nbsp;Nom') this.value = ''">
           </div>
 
           <div class="clear-top">
-            <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email matte-thin" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address&nbsp;&#92;&nbsp;Addresse e-mail" onfocus="if (this.value=='E-mail address&nbsp;&#92;&nbsp;Addresse e-mail') this.value = ''" title="E-mail address required. &#92;&nbsp;Adresse e-mail requis.">
+            <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email matte-thin" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address&nbsp;&#92;&nbsp;Addresse e-mail" onfocus="if (this.value == 'E-mail address&nbsp;&#92;&nbsp;Addresse e-mail') this.value = ''" title="E-mail address required. &#92;&nbsp;Adresse e-mail requis.">
             <button type="submit">Register<font class="fr">&nbsp;&#92;&nbsp;Enregistrez</font></button>
 
           </div>
