--- a/patron/index.html
+++ b/patron/index.html
@@ -56,7 +56,7 @@
 
         <div class="clear-top">
           <a href="https://www.paypal.com/donate/?hosted_button_id=D9WFX6HM23ZYC" title="PayPal / En / Animat Habitat" rel="noopener"><button>Donation<font class="fr">&nbsp;&#92;&nbsp;Don</font> <font class="small">CA$</font></button></a>
-          <p class="linebreak lineend">Support independent art at Animat Habitat with any amount you can <i>with no strings attached</i>.<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat avec tout montant que vous le pouvez sans aucune condition.</font></p>
+          <p class="linebreak lineend">Support independent art at Animat Habitat with any amount you can, <i>with no strings attached</i>.<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat avec tout montant que vous le pouvez sans aucune condition.</font></p>
 
           <pre class="thin"></pre>
 
@@ -65,7 +65,7 @@
         </div>
 
         <div class="clear-top">
-          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WD13901BR293801XMNDAFNA" title="PayPal CA$25 / Patron at Animat Habitat." target="_blank" rel="noopener"><button>Patron <font class="small">CA$25 per&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;par&nbsp;an</font></font></button></a>
+          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WD13901BR293801XMNDAFNA" title="PayPal" target="_blank" rel="noopener"><button>Patron <font class="small">CA$25 per&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;par&nbsp;an</font></font></button></a>
           <p class="linebreak">Support independent art at Animat Habitat as a Patron Member, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat en tant que membre patron, et vous recevrez&nbsp;:</font></p>
 
           <ul class="square">
@@ -79,8 +79,8 @@
 
       </div>
 
-      <div>
-        <h3 class="linebreak">Official Councils<font class="fr">&nbsp;&#92;&nbsp;Conseils officiels</font></h3>
+      <div class="text-center">
+        <h3 class="linebreak">Official Councils<font class="fr">&nbsp;&#92;&nbsp;Conseils officiels.</font></h3>
         <p>Support independent art at Animat Habitat as a member of a council.<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat en tant que membre d'un conseil.</font></p>
 
       </div>
@@ -89,7 +89,7 @@
 
         <div class="clear-top">
           <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-57U63714MU8341144MNDAT2A" target="_blank" title="PayPal CA$250 / Periwinkle Council at Animat Habitat." rel="noopener"><button>Periwinkle <font class="small">CA$250 per&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;par&nbsp;an</font></font></button></a>
-          <p class="linebreak">As a Periwinkle Council member, your donation will help fund research and development at Animat Habitat, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Pervenche, votre don contribuera au financement de la recherche et du d&eacute;veloppement chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
+          <p class="linebreak">Support research and development at Animat Habitat as a Periwinkle Council member, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Pervenche, votre don contribuera au financement de la recherche et du d&eacute;veloppement chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
 
           <p class="linebreak"><i>All patron benefits plus&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Tous les avantages des patrons plus&hellip;</i></font></p>
 
@@ -115,7 +115,7 @@
 
           </div>
 
-          <p class="linebreak">As a Silver Council member, your donation will help fund exhibitions and publications at Animat Habitat, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Silver, votre don contribuera au financement des expositions et des publications chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
+          <p class="linebreak">Support exhibitions and publications at Animat Habitat as a Silver Council member, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Silver, votre don contribuera au financement des expositions et des publications chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
 
           <p class="linebreak"><i>All patron benefits plus&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Tous les avantages des patrons plus&hellip;</i></font></p>
 
@@ -143,7 +143,7 @@
 
         <div>
           <h5><font class="color-one">Scene One Selections<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections de sc&egrave;ne un</font></font></h5>
-          <p class="lineend">Through sales of <i>White Elephant</i> and the art of <i>White Elephant</i>, this first scene at Animat Habitat has directed more than CA$3,000 to 5 conservation projects across 3 countries&mdash;to date.<font class="fr">&nbsp;&#92;&nbsp;Gr&acirc;ce aux ventes de <i>&Eacute;l&eacute;phant blanc</i> et de l'art de <i>&Eacute;l&eacute;phant blanc</i>, cette premier sc&egrave;ne chez Animat Habitat &agrave; pu diriger de plus de 3 000 $ CA &agrave; 5 projets dans 3 pays &mdash; &agrave; ce jour.</font></p>
+          <p class="lineend">Through sales of <i>White Elephant</i> and the art of <i>White Elephant</i>, this first scene at Animat Habitat has directed more than CA$3,500 to 5 conservation projects across 3 countries&mdash;to date.<font class="fr">&nbsp;&#92;&nbsp;Gr&acirc;ce aux ventes de <i>&Eacute;l&eacute;phant blanc</i> et de l'art de <i>&Eacute;l&eacute;phant blanc</i>, cette premier sc&egrave;ne chez Animat Habitat &agrave; pu diriger de plus de 3 500 $ CA &agrave; 5 projets dans 3 pays &mdash; &agrave; ce jour.</font></p>
 
         </div>
 
