--- a/patron/index.html
+++ b/patron/index.html
@@ -79,7 +79,7 @@
 
       </div>
 
-      <div class="text-center">
+      <div>
         <h3 class="linebreak">Official Councils<font class="fr">&nbsp;&#92;&nbsp;Conseils officiels.</font></h3>
         <p>Support independent art at Animat Habitat as a member of a council.<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat en tant que membre d'un conseil.</font></p>
 
