--- a/patron/index.html
+++ b/patron/index.html
@@ -89,7 +89,7 @@
 
         <div class="clear-top">
           <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-57U63714MU8341144MNDAT2A" target="_blank" title="PayPal CA$250 / Periwinkle Council at Animat Habitat." rel="noopener"><button>Periwinkle <font class="small">CA$250 per&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;par&nbsp;an</font></font></button></a>
-          <p class="linebreak">Support research and development at Animat Habitat as a Periwinkle Council member, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Pervenche, votre don contribuera au financement de la recherche et du d&eacute;veloppement chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
+          <p class="linebreak">Support research and development at Animat Habitat as a Periwinkle Council member, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;Soutenez la recherche et le d&eacute;veloppement chez Animat Habitat en tant que membre du Conseil Pervenche, et vous recevrez&nbsp;:</font></p>
 
           <p class="linebreak"><i>All patron benefits plus&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Tous les avantages des patrons plus&hellip;</i></font></p>
 
@@ -115,7 +115,7 @@
 
           </div>
 
-          <p class="linebreak">Support exhibitions and publications at Animat Habitat as a Silver Council member, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Silver, votre don contribuera au financement des expositions et des publications chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
+          <p class="linebreak">Support exhibitions and publications at Animat Habitat as a Silver Council member, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;Soutenez les expositions et les publications chez Animat Habitat en tant que membre du Conseil Silver, et vous recevrez&nbsp;:</font></p>
 
           <p class="linebreak"><i>All patron benefits plus&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Tous les avantages des patrons plus&hellip;</i></font></p>
 
