--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -47,7 +47,7 @@
       <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
       <h3>Scene two:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Tiger</font></a></h1>
-      <h3><font class="color-reset">Oil painting of an Amur tiger in the taiga.</font><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l’huile d’un tigre de Sib&eacute;rie dans la ta&iuml;ga.</font></h3>
+      <h3><font class="color-reset">An exhibition of art to change the way we look at wildlife.<font class="fr"><br>Une exposition d'art pour changer la fa&ccedil;on dont nous regardons la nature.</font></font></h3>
     </div>
   </header>
 
@@ -75,7 +75,7 @@
 
         </div>
 
-        <p class="linebreak"><i>White Tiger</i> is an oil painting of an Amur tiger in the taiga. This painting is photographed and reproduced in limited edition as an archival pigment print on acid-free archival paper, and printed with an inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available in two sizes. A digital copy of the corrected and edited photograph is also available.<font class="fr">&nbsp;&#92;&nbsp;<i>Tigre blanc</i> est une peinture &agrave; l'huile d’un tigre dans la ta&iuml;ga. Cette peinture est photographi&eacute;e et reproduite en &eacute;dition limit&eacute;e en tant que tirage pigmentaire d'archives sur du papier d'archivage sans acide, et imprim&eacute;e avec une mate d'un pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options d'encadrement. Les tirages pigmentaires d'archives sont disponibles en deux tailles. Une copie num&eacute;rique de la photo corrig&eacute;e et &eacute;dit&eacute;e est &eacute;galement disponible.</font></p>
+        <p class="linebreak"><i>White Tiger</i> is an oil painting of an Amur tiger in the taiga. This publication is second in a series of scenes in wildlife art at Animat Habitat. The original painting is photographed and reproduced in limited edition as an archival pigment print on acid-free archival paper, and printed with an inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available for pre-order in two sizes. A digital copy of the corrected and edited photograph is also available for pre-order.<font class="fr">&nbsp;&#92;&nbsp;<i>Tigre blanc</i> est une peinture &agrave; l'huile d’un tigre dans la ta&iuml;ga. Cette publication est la deuxi&egrave;me d'une s&eacute;rie de projets chez Animat Habitat. La peinture originale est photographi&eacute;e et reproduite en &eacute;dition limit&eacute;e en tant que tirage pigmentaire d'archives sur du papier d'archivage sans acide, et imprim&eacute;e avec une mate d'un pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options d'encadrement. Les tirages pigmentaires d'archives sont disponibles en deux tailles. Une copie num&eacute;rique de la photo corrig&eacute;e et &eacute;dit&eacute;e est &eacute;galement disponible.</font></p>
 
         <p class="linebreak">Exhibition Date:<font class="fr">&nbsp;&#92;&nbsp;Date d'exposition&nbsp;:</font> &ndash;</p>
 
@@ -237,21 +237,6 @@
     <article>
       <div class="quote">
 
-        <!-- <h3><a href="tiger-conservation-primorye/"><font class="color">Tiger Conservation &ndash; Primorye</font><font class="toggle-form-full"> &#47;&nbsp;<i>Nature</i></font></a></h3>
-        <pre class="thin"></pre> -->
-
-        <!-- <h3><a href="making-of-amba/"><font class="color">Making of Amba</font><font class="toggle-form-full"> &#47;&nbsp;<i>Art</i></font></a></h3>
-        <pre class="thin"></pre> -->
-
-        <!-- <h3><a href="history-of-forests-rewilding/"><font class="color">History of Forests &ndash; Rewilding</font><font class="toggle-form-full"> &#47;&nbsp;<i>Nature</i></font></a></h3>
-        <pre class="thin"></pre> -->
-
-        <!-- <h3><a href="history-of-forests-tigers/"><font class="color">A History of the Forest &ndash; Trees</font><font class="toggle-form-full"> &#47;&nbsp;<i>Nature</i></font></a></h3>
-        <pre class="thin"></pre> -->
-
-        <!-- <h3><a href="the-beginning-of-printing/"><font class="color">The Beginning of Printing</font><font class="toggle-form-full"> &#47;&nbsp;<i>Art</i></font></a></h3>
-        <pre class="thin"></pre> -->
-
         <h3><a href="the-beginning-of-exhibiting/"><font class="color">The Beginning of Exhibiting</font><font class="toggle-form-full"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
@@ -286,6 +271,9 @@
 
       <p class="linebreak small"><font class="title">Bloody Mary &middot;&nbsp;White Sky &middot;&nbsp;White Moon</font></p>
       <p class="small"><font class="small">Sooyong Park <i>Endangered Emperors of Siberia: The Fall of Three Generations</i> (film, 2003)</font></p>
+
+      <!-- <p class="linebreak small"><font class="title">Golu</font></p>
+      <p class="small"><font class="small">Disney Nature <i>Tiger</i> (film, 2024)</font></p> -->
 
     </div>
 
