--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -47,7 +47,7 @@
       <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
       <h3>Scene two:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Tiger</font></a></h1>
-      <h3><font class="color-reset">An exhibition of art to change the way we look at wildlife.<font class="fr"><br>Une exposition d'art pour changer la fa&ccedil;on dont nous regardons la nature.</font></font></h3>
+      <h3><font class="color-reset">Exhibition of art to change the way we look at wildlife.<font class="fr"><br>Exposition d'art pour changer la fa&ccedil;on dont nous regardons la nature.</font></font></h3>
     </div>
   </header>
 
