--- a/index/index.html
+++ b/index/index.html
@@ -53,6 +53,10 @@
         <p>Animat Habitat <a href="../scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
         <p>Animat Habitat Scene Two &ndash; <a href="../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
+        <h5 class="linebreak title"><font class="color-three">III&nbsp; White Bear</font></h5>
+        <p>Animat Habitat <a href="../scene/three/" title="Animat Habitat scene three. &ndash;&nbsp;sc&egrave;ne trois.">Scene Three</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne trois</font></p>
+        <p>Animat Habitat Scene Three &ndash; <a href="../scene/three/history-of-whales-north-atlantic-right-whale/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. A History of Whales, Northern Atlantic Right Whale.">A History of Whales</a> &hellip;</p>
+
         <h5 class="letterhead title">Boutique</h5>
         <p>Animat Habitat <a href="../boutique/" title="Animat Habitat boutique.">Boutique</a></p>
         <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/digital-numerqiue/" title="Animat Habitat boutique. Digital editions. &ndash;&nbsp;&Eacute;ditions num&eacute;riques.">Digital Editions</a><font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font></p>
