--- a/scene/two/tiger-conservation-siberia/index.html
+++ b/scene/two/tiger-conservation-siberia/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src s.animathabitat.org 'unsafe-inline'; style-src fonts.googleapis.com 'self' 'unsafe-inline';" />
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -38,9 +38,8 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2022</h4>
-        <h2 class="color">Siberian Tiger Project</h2>
+        <h2 class="color">Tiger Conservation in Siberia</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
-
       </div>
 
       <div>
@@ -52,7 +51,7 @@
       <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../the-beginning-of-chapter-two/" rel="prev"><font class="toggle-form-full">The Beginning of Chapter Two /</font><font class="toggle-form-break">Previous Article /</font></a>
-          <a class="nav-next" href="../history-of-the-forest-and-the-trees/" rel="next"><font class="toggle-form-full">/ The Forest Behind the Trees</font><font class="toggle-form-break">/ Next Article</font></a>
+          <a class="nav-next" href="../history-of-forests-trees/" rel="next"><font class="toggle-form-full">/ The Forest Behind the Trees</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
