--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -177,27 +177,14 @@
         </div>
       </div>
 
-      <div>
-        <div class="color text-center">
+      <div class="gutter-tobo"><div class="color text-center"><h3 class="linebreak">Help give life to the wild places.</h3><h5>You can support Animat Habitat in a few ways.</h5><div class="triptych">
 
-          <h3 class="linebreak">Help give life to the wild places.</h3>
-          <h5>You can support Animat Habitat in a few ways.</h5>
+            <div class="gutter-small"><a href="../../../patron/" title="Animat Habitat patrons." target="_blank"><button class="text-center title">Donate</button></a></div>
 
-          <div class="triptych">
-            <div class="gutter-small">
-              <a href="../../../patron/" title="Animat Habitat patrons." target="_blank"><button class="text-center title">Donate</button></a>
-            </div>
+            <div class="gutter-small"><a href="../../../boutique/" title="Animat Habitat boutique." target="_blank"><button class="text-center title">Shop</button></a></div>
 
-            <div class="gutter-small">
-              <a href="../../../boutique/" title="Animat Habitat boutique." target="_blank"><button class="text-center title">Shop</button></a>
-            </div>
+            <div class="gutter-small"><a href="../../../rss/" title="Animat Habitat broadcast." target="_blank"><button class="text-center title">Subscribe</button></a></div></div></div>
 
-            <div class="gutter-small">
-              <a href="../../../rss/" title="Animat Habitat broadcast." target="_blank"><button class="text-center title">Subscribe</button></a>
-            </div>
-
-          </div>
-        </div>
       </div>
 
       <div class="clear article-navigation" role="navigation">
