--- a/scene/two/history-of-forests-trees/index.html
+++ b/scene/two/history-of-forests-trees/index.html
@@ -100,28 +100,11 @@
 
       </div>
 
-      <!-- <div class="clear">
-        <img alt="" src="https://via.animathabitat.org/img/02/art/clyfford-still/1957.still.ph-48.jpg" />
-        <p class="text-right gutter-side lineend"><i>PH-48</i> (oil color, 1957) &copy; Clyfford Still [<a href="../../../url/com//" rel="noopener" target="_blank" title=""></a>]</p>
-
-      </div>
-
-      <div class="clear">
-        <img alt="" src="https://via.animathabitat.org/img/02/art/robert-bateman/1999.bateman.rockface-descent-leopard.jpg" />
-        <p class="text-right gutter-side"><i>Rockface Decent &ndash; Leopard</i> (acrylic color, 1999) &copy; Robert Bateman [<a href="../../../url/-ca/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, recolored]</p>
-
-      </div> -->
-
-      <!-- Clyfford Still (American, 1904–1980). PH-48 (1957-D-No. 1), 1957. Oil on canvas, 113 x 159 inches (287 x 403.9 cm). Collection Albright-Knox Art Gallery, Buffalo, New York; Gift of Seymour H. Knox, Jr., 1959 (K1959:26). © 2016 City and County of Denver / Artists Rights Society (ARS), New York. -->
-
       <div class="clear">
 
         <div class="quote" id="footnotes">
           <p class="small"><sup>1</sup> Lightfoot, Norman R. <i>Images of the Wild</i> (1978) National Film Board of Canada.</p>
           <p class="small"><sup>2</sup> Archibold, Rick. <i>Robert Bateman: An Artist in Nature</i> (1990) Madison Press Books.</p>
-
-          <!-- “Bateman captures a moment in time, a moment that could have happened, but did not.” -->
-          <!-- Roger Tory Peterson ?? -->
 
         </div>
       </div>
@@ -168,21 +151,10 @@
 
         <p class="linebreak">I look to appropriate these painterly aesthetics into a selection of studio works with cold wax and other impasto mediums and so on.</p>
 
-        <p class="linebreak">As part of <a href="../the-beginning-of-painting/" title="Animat Habitat scene two. The Beginning of Painting.">The Beginning of Painting</a> at Animat Habitat &ndash; building up to an oil painting of a tiger in the taiga &ndash; other works are underway. Of note is a diptych based on an abstract black-and-white pattern of vertical stripes. The stripes are mostly birch trees. The pattern of white trees and the spaces in-between will comprise the composition. The diptych is titled <i>White Birch</i>&mdash;an oil painting of a moose and a yellow-bellied sapsucker in the shade of a paper birch forest.</p>
+        <p class="linebreak">As part of <a href="../the-beginning-of-painting/" title="Animat Habitat scene two. The Beginning of Painting.">The Beginning of Painting</a> at Animat Habitat &ndash; building up to an oil painting of an Amur tiger in the taiga &ndash; other works are underway. Of note is a diptych based on an abstract black-and-white pattern of vertical stripes. The stripes are mostly birch trees. The pattern of white trees and the spaces in-between will comprise the composition. The diptych is titled <i>White Birch</i>&mdash;an oil painting of a moose and a yellow-bellied sapsucker in the shade of a paper birch forest.</p>
 
         <p class="linebreak"><i>A low, diffuse light dimly reflects the white bark of paper birch trees on the fringes of the foreground. The light does not reach far into the forest&mdash;into the distance of the picture. The resulting picture is a pattern of dark and light with spaces where wildlife will blend in-between. A moose meanders through a shadowy mist at dawn. A sapsucker mulls over a spot to start the day. However, the animals in this picture are peripheral to the habitat. The forest habitat as a whole is the focus. The pattern of the trees.</i></p>
 
-      <!-- </div>
-
-      </div>
-
-      <div class="clear">
-        <img alt="" src="https://via.animathabitat.org/img/02/art/malika-favre/favre.hide-seek.2.png" />
-        <p class="text-right gutter-side"><i>Hide and Seek</i> (2012) by Malika Favre [<a href="../../../url/com//" rel="noopener" target="_blank" title=""></a>]</p>
-
-      </div>
-
-      <div> -->
         <p class="linebreak">This diptych is designed with a minimal palette, holding back on the use of color, and reducing the darks and lights to a pattern of mid-tones. This minimal palette is, in part, a technical exercise like Bob took on with <i>Midnight &ndash; Black Wolf</i> (acrylic color, 1989) and again with <i>White Encounter &ndash; Polar Bear</i> (acrylic color, 2005). Robert Bateman describes the challenge to paint most of a painting within a limited range of off-whites, &ldquo;like a composition on a piano in four notes high in the tonal treble clef.&ldquo; And <i>Midnight &ndash; Black Wolf</i> was the opposite challenge, &ldquo;to do most of the painting in four notes of the bass clef.&rdquo;<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Bateman, .">4</a>]</sup></p>
 
       </div>
@@ -309,27 +281,14 @@
         </div>
       </div>
 
-      <div>
-        <div class="color text-center">
+      <div class="gutter-tobo"><div class="color text-center"><h3 class="linebreak">Help give life to the wild places.</h3><h5>You can support Animat Habitat in a few ways.</h5><div class="triptych">
 
-          <h3 class="linebreak">Help give life to the wild places.</h3>
-          <h5>You can support Animat Habitat in a few ways.</h5>
+            <div class="gutter-small"><a href="../../../patron/" title="Animat Habitat patrons." target="_blank"><button class="text-center title">Donate</button></a></div>
 
-          <div class="triptych">
-            <div class="gutter-small">
-              <a href="../../../patron/" title="Animat Habitat patrons." target="_blank"><button class="text-center title">Donate</button></a>
-            </div>
+            <div class="gutter-small"><a href="../../../boutique/" title="Animat Habitat boutique." target="_blank"><button class="text-center title">Shop</button></a></div>
 
-            <div class="gutter-small">
-              <a href="../../../boutique/" title="Animat Habitat boutique." target="_blank"><button class="text-center title">Shop</button></a>
-            </div>
+            <div class="gutter-small"><a href="../../../rss/" title="Animat Habitat broadcast." target="_blank"><button class="text-center title">Subscribe</button></a></div></div></div>
 
-            <div class="gutter-small">
-              <a href="../../../rss/" title="Animat Habitat broadcast." target="_blank"><button class="text-center title">Subscribe</button></a>
-            </div>
-
-          </div>
-        </div>
       </div>
 
       <div class="clear article-navigation" role="navigation">
