--- a/scene/one/making-of-ella-3/index.html
+++ b/scene/one/making-of-ella-3/index.html
@@ -54,21 +54,19 @@
       <div>
         <p>This expression sheet is an excersize in character development, as well as a guide in part to facial animation.</p>
 
+        <p class="linebreak">A lot of the character animation is able to reference documentary film and stock footage. A little sequence in the story steps outside of the reference material. The more complex and, in this case, less natural sequences of animation start as sketches in a storyboard. Here is Ella's dance in the clouds.</p>
+
       </div>
 
       <img alt="White Elephant storyboard p&nbsp;8-9. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.story.board.8-9.jpg" />
-      <p class="text-right gutter-side"><i>White Elephant</i> storyboard p&nbsp;8-9. (2015)</p>
-
-      <div>
-        <p>A lot of the character animation is able to reference documentary film and stock footage. A little sequence in the story steps outside of the reference material. The more complex and, in this case, less natural sequences of animation start as sketches in a storyboard. Here is Ella's dance in the clouds.</p>
-
-      </div>
+      <!-- <p class="text-right gutter-side"><i>White Elephant</i> storyboard p&nbsp;8-9. (2015)</p> -->
 
       <img alt="White Elephant storyboard p&nbsp;9-12. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.story.board.9-12.jpg" />
-      <p class="text-right gutter-side"><i>White Elephant</i> storyboard p&nbsp;9-12. (2015)</p>
+      <p class="text-right gutter-side lineend"><i>White Elephant</i> storyboard p&nbsp;8-9, p&nbsp;9-12. (2015)</p>
 
       <div>
-        <p>Pencil and paper to start the visual development of a visual story. Here is a pencil drawing of Ella after the storm.</p>
+
+        <p>The visual development of a visual story starts with pencil and paper. For example, a pencil drawing of Ella after the storm. The paper was scanned and, then, painted over in a digital painting software.</p>
 
       </div>
 
@@ -81,7 +79,7 @@
       </div>
 
       <img class="matte-thin" alt="White Elephant &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.jpg" />
-      <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; (digital paint, 2015)</p>
+      <p class="text-right gutter-side lineend">&ldquo;Ella after the storm.&rdquo; (digital paint, 2015)</p>
 
       <!-- <div>
         <p><i>One more thing.</i></p>
