--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -124,7 +124,6 @@
 
       </div>
 
-
       <div class="quote" id="footnotes">
         <!-- <p class="small"><sup>1</sup> Sam Anderson. The Last Two Northern White Rhinos On Earth: What will we lose when Najin and Fatu die? New York Times. 2021. <a href="../../../url/nytimes/the-last-two-northern-white-rhinos-on-earth/" title="New York Times / The Last Two Northern White Rhinos On Earth" target="_blank" rel="noopener">Website&nbsp;Link</a></p> -->
         <p class="small"><sup>1</sup> Ami Vitale. The Last Goodbye. 2019. <a href="../../../url/-com/amivitale-goodbye-sudan/" title="Ami Vitale / The Last Goodbye" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
@@ -132,6 +131,16 @@
         <p class="small"><sup>3</sup> IUCN Red List. Conservation efforts bring cautious hope for African rhinos. IUCN. March 2020. <a href="../../../url/-org/iucn-conservation-efforts-bring-cautious-hope-african-rhinos/" title="." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
         <p class="small"><sup>4</sup> Seven Worlds, One Planet. &lsquo;These Two Rhinos Are The Last Of Their Kind.&rsquo; BBC Earth. 2019. <a href="../../../url/youtube/Q8eh58Z249o/" title="YouTube / BBC Earth / Seven Worlds, One Planet: These Two Rhinos Are The Last Of Their Kind." target="_blank" rel="noopener">Video&nbsp;Link</a></p>
         <p class="small"><sup>4</sup> Seven Worlds, One Planet. &lsquo;Living on the brink&rsquo; BBC Earth. 2019. <a href="../../../url/www/bbcearth-living-on-the-brink/" title="BBC Earth / Seven Worlds, One Planet: Living on the brink." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+
+      </div>
+
+      <div class="gutter-tobo"><div class="color text-center"><h3 class="linebreak">Help give life to the wild places.</h3><h5>You can support Animat Habitat in a few ways.</h5><div class="triptych">
+
+            <div class="gutter-small"><a href="../../../patron/" title="Animat Habitat patrons." target="_blank"><button class="text-center title">Donate</button></a></div>
+
+            <div class="gutter-small"><a href="../../../boutique/" title="Animat Habitat boutique." target="_blank"><button class="text-center title">Shop</button></a></div>
+
+            <div class="gutter-small"><a href="../../../rss/" title="Animat Habitat broadcast." target="_blank"><button class="text-center title">Subscribe</button></a></div></div></div>
 
       </div>
 
