--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -55,7 +55,7 @@
       <section class="single">
         <div class="text-center">
           <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="matte-preview" src="../../inc/img/boutique/01/white-elephant.2023.cover.preview.1280.jpg" />
-          <p class="linebreak"><i>White Elephant</i> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, 2024)</p>
+          <p class="linebreak"><i>White Elephant</i> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, &ndash;)</p>
         </div>
 
       </section>
