--- a/champion/index.html
+++ b/champion/index.html
@@ -59,7 +59,7 @@
 
           <h5>2023</h5>
 
-          <h5 class="linebreak small"><i>Journalism, Photo-journalism</i></h5>
+          <h5 class="linebreak small"><i>Arts</i>, <i>Journalism</i></h5>
           <h5><a href="../url/-com/bryanchristy/" title="" target="_blank">Brian Christy</a> <b>&middot;</b> Investigative journalist and founder of National Geographic Special Investigations</h5>
           <h5><a href="../url/-com/brentstirton/" title="" target="_blank" rel="noopener">Brent Stirton</a> <b>&middot;</b> Photographer, notably for National Geographic Magazine</h5>
           <p>Recognized for investigative journalism, in particular, documenting the illegal trade in ivory.</p>
@@ -83,12 +83,12 @@
 
           <h5>2022</h5>
 
-          <h5 class="linebreak small"><i>Arts, Sciences</i></h5>
+          <h5 class="linebreak small"><i>Arts</i>, <i>Sciences</i></h5>
           <h5>Thalefang Samuel Charles <b>&middot;</b> Photographer and storyteller, Botswana &ndash; <a href="../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a></h5>
           <p>Recognized for his chronicles of Indigenous knowledge across the Okavango Delta.</p>
           <p><font class="fr">Reconnu pour ses chroniques du savoir autochtones &agrave; travers le delta de l'Okavango.</font></p>
 
-          <h5 class="linebreak small"><i>Arts, Sciences</i></h5>
+          <h5 class="linebreak small"><i>Arts</i></h5>
           <h5>Rolf Steinmann <b>&middot;</b> Wildlife cinematographer, <a href="../url/vimeo/148059977/" title="" target="_blank">In Between</a> (short film, 2015)</h5>
           <p>Recognized for cinematography of wildlife in the Arctic, Antarctic and in between.</p>
           <p><font class="fr">Reconnu pour la cin&eacute;matographie de la nature dans l'Arctique et l'Antarctique.</font></p>
@@ -100,7 +100,7 @@
           <div class="clear" id="in-mem-2022">
             <h5 class="linebreak"><a onclick="toggle_2022m();">&minus;</a></h5>
             <h5 class="linebreak title">In Memoriam</h5>
-            <p><a href="../url/-org/leakeyfoundation/richard-leakey-renowned-paleoanthropologist-and-conservationist-dies-at-age-77/" title="" target="_blank">Dr Richard Erskine Frere Leakey</a> (1944-2022) <b>&middot;</b> Renowned paleoanthropologist and wildlife conservationist.</p>
+            <p><a href="../url/-org/leakeyfoundation-renowned-paleoanthropologist-and-conservationist-dies-at-age-77/" title="" target="_blank">Dr Richard Erskine Frere Leakey</a> (1944-2022) <b>&middot;</b> Renowned paleoanthropologist and wildlife conservationist.</p>
             <p>Remembered as an activist for democracy in Africa and as an advocate for African science, from the fossil-rich sedimentary rocks on the shore of Lake Turkana in northern Kenya all the way to the head of Kenya Wildlife Service in 1989 and then to the head of the Kenyan Civil Service in 1998.<font class="fr">&nbsp;&#92;&nbsp;Connu comme un militant pour la d&eacute;mocratie en Afrique et un d&eacute;fenseur de la science africaine, depuis les roches s&eacute;dimentaires riches en fossiles sur les rives du lac Turkana, dans le nord du Kenya, jusqu'au chef du Kenya Wildlife Service en 1989, et puis au chef de la fonction publique kenyane en 1998.</font></p>
 
           </div>
@@ -117,7 +117,7 @@
 
           <h5>2021</h5>
 
-          <h5 class="linebreak small"><i>Arts</i></h5>
+          <h5 class="linebreak small"><i>Arts</i>, <i>Sciences</i></h5>
           <h5>Dr Anne Christine Innis Dagg, CM <b>&middot;</b> Zoologist and author, <a href="../url/-org/anneinnisdaggfoundation/" title="Anne Innis Dagg Foundation" target="_blank">Anne Innis Dagg Foundation</a></h5>
           <p>Recognized for her foundational research of giraffes.</p>
           <p><font class="fr">Reconnue pour ses recherches fondamentales sur les girafes.</font></p>
@@ -251,7 +251,7 @@
           <p>Recognized for conservation leadership in the Greater Amboseli ecosystem.</p>
           <p><font class="fr">Reconnu pour ses efforts de conservation dans l'&eacute;cosyst&egrave;me Amboseli.</font></p>
 
-          <h5 class="linebreak small"><i>Sciences</i></h5>
+          <h5 class="linebreak small"><i>Arts</i></h5>
           <h5>Sir David Frederick Attenborough and BBC Studios Natural History Unit</h5>
           <p>Recognized as a voice for the natural world.</p>
           <p><font class="fr">Reconnu comme une voix pour le monde naturel.</font></p>
